hover effect and links updated

--- a/index.html
+++ b/index.html
@@ -115,21 +115,58 @@
       <div class="containers">
         <h1 class="sub-title">Skills</h1>
         <div class="skills-list">
-          <div> <img src="Images/html.png" alt="">
-         <a href="">HTML</a></div>
-          <div><img src="Images/css.png" alt="">
-            <a href="">CSS</a></div>
-          <div><img src="Images/javascript.png" alt=""> 
-            <a href="">JS</a></div>
+          <div>
+            <img src="Images/html.png" alt="" />
+            <a
+              href="https://drive.google.com/file/d/1JpVVyc0JqzeDnizT6_5dP5bfICGgG4v-/view?usp=share_link"
+              target="_blank"
+              class="btn"
+              >HTML</a
+            >
+          </div>
+          <div>
+            <img src="Images/css.png" alt="" />
+            <a
+              href="https://drive.google.com/file/d/1EijzC7xYYyt6s_0HrlLBmdjzrIpATvjt/view?usp=share_link"
+              target="_blank"
+              class="btn"
+              >CSS</a
+            >
+          </div>
+          <div>
+            <img src="Images/javascript.png" alt="" />
+            <a
+              href="https://drive.google.com/file/d/1qnoe0b_7ARLrH-sqK9d0GAZ07eq7Rc2Z/view?usp=share_link"
+              target="_blank"
+              class="btn"
+              >JS</a
+            >
+          </div>
         </div>
         <div class="skills-list">
-            <div> <img src="Images/c.png" alt="">
-           <a href="https://drive.google.com/file/d/10q5nezCATY8gNJ-cU7gjHq2Ev0EH7YtN/view?usp=share_link">C</a></div>
-            <div><img src="Images/c++-removebg-preview.png" alt="">
-              <a href="" alt="not available">C++</a></div>
-            <div><img src="Images/python.png" alt=""> 
-              <a href="https://drive.google.com/file/d/10hL8YgsGh_c7gPNc49nnVsKNsmb7xEBS/view?usp=share_link" target="_blank" class="btn">Python</a></div>
+          <div>
+            <img src="Images/c.png" alt="" />
+            <a
+              href="https://drive.google.com/file/d/10q5nezCATY8gNJ-cU7gjHq2Ev0EH7YtN/view?usp=share_link"
+              target="_blank"
+              class="btn"
+              >C</a
+            >
           </div>
+          <div>
+            <img src="Images/c++-removebg-preview.png" alt="" />
+            <a href="" alt="not available" target="_blank" class="btn">C++</a>
+          </div>
+          <div>
+            <img src="Images/python.png" alt="" />
+            <a
+              href="https://drive.google.com/file/d/10hL8YgsGh_c7gPNc49nnVsKNsmb7xEBS/view?usp=share_link"
+              target="_blank"
+              class="btn"
+              >Python</a
+            >
+          </div>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
