myWork section updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortFolio</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/260e3c8ad9.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="header">
@@ -17,7 +18,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#">Work</a></li>
+            <li><a href="#myWork">Work</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
@@ -112,7 +113,7 @@
 
     <!-- SERVICES -->
     <div id="skills">
-      <div class="containers">
+      <div class="container">
         <h1 class="sub-title">Skills</h1>
         <div class="skills-list">
           <div>
@@ -165,6 +166,37 @@
               class="btn"
               >Python</a
             >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- my work -->
+    <div id="myWork">
+      <div class="container">
+        <h1 class="sub-title">My Work</h1>
+        <div class="work-list">
+          <div class="work">
+            <img src="Images/quizApp.png" alt="">
+            <div class="layer">
+              <h3>Quick Quiz</h3>
+              <p>Check this out</p>
+              <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="Images/Screenshot 2022-11-12 114104.png" alt="">
+            <div class="layer">
+              <h3>Chrome Extension</h3>
+              <p>A chrome extension which lets you save the links and use it later</p>
+              <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+          </div>
+          </div>
+          <div class="work">
+            <img src="Images/website.png" alt="">
+            <div class="layer">
+            <h3>Website</h3>
+              <p>Check this out</p>
+              <a href=""><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
       </div>
