--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PortFolio</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="phone.css">
     <script src="https://kit.fontawesome.com/260e3c8ad9.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -15,12 +16,14 @@
           <img src="Images/me1.png" alt="logo" />
           <!-- <img src="Images/logo.png" alt="logo"> -->
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#myWork">Work</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <i class="fa-solid fa-xmark"></i>
           </ul>
+          <i class="fa-solid fa-bars"></i>
         </nav>
         <div class="header-text">
           <!-- <p>Student</p> -->
@@ -200,6 +203,38 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <!-- Contact -->
+    <div id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1 class="sub-title">Contact Me</h1>
+            <p><i class="fa-solid fa-envelope"></i>medhavimehta118@gmail.com</p>
+            <p><i class="fa-solid fa-phone"></i>9429510929</p>
+            <div class="social-icons">
+              <a href="https://github.com/medhavii"><i class="fa-brands fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/medhavi-mehta-1284271b5/"><i class="fa-brands fa-linkedin"></i></a>
+              <a href="https://twitter.com/medhavi_mehta"><i class="fa-brands fa-square-twitter"></i></a>
+            </div>
+            <a href="https://drive.google.com/file/d/1W_jCo4adY8WORcb2VlBRTOdbP-wTCAbU/view?usp=share_link" target="_blank" class="btn btn2">RESUME</a>
+          </div>
+          <div class="contact-right">
+            <form action="">
+              <input type="text" name="Name" placeholder="Your Name" required>
+              <input type="email" name="Email" placeholder="Your Email" required>
+              <textarea name="Message"  rows="6" placeholder="Your Message"></textarea>
+              <button type="Submit" class="btn btn2">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+    <div class="copyright">
+      <p>Copyright <i class="fa-regular fa-copyright"></i> Medhavi.</p>
+      
     </div>
     <script src="script.js"></script>
   </body>
