--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PortFolio</title>
+    <title>Medhavi Mehta</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="phone.css">
     <script src="https://kit.fontawesome.com/260e3c8ad9.js" crossorigin="anonymous"></script>
