--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="phone.css">
     <script src="https://kit.fontawesome.com/260e3c8ad9.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body>
     <div id="header">
       <div class="container">
         <nav>
-          <img src="Images/me1.png" alt="logo" />
+          <img src="icon/favicon.ico" alt="logo" />
           <!-- <img src="Images/logo.png" alt="logo"> -->
           <ul id="sideMenu">
             <li><a href="#header">Home</a></li>
