skill cards made smaller

--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medhavi Mehta</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="phone.css">
-    <script src="https://kit.fontawesome.com/260e3c8ad9.js" crossorigin="anonymous"></script>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="stylesheet" href="phone.css" />
+    <script
+      src="https://kit.fontawesome.com/260e3c8ad9.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="header">
       <div class="container">
-        <nav>
+        <nav class="navbar">
           <img src="icon/favicon.ico" alt="logo" />
           <!-- <img src="Images/logo.png" alt="logo"> -->
           <ul id="sideMenu">
@@ -183,27 +186,41 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
           <div class="work">
-            <img src="Images/quizApp.png" alt="">
+            <img src="Images/quizApp.png" alt="" />
             <div class="layer">
               <h3>Quick Quiz</h3>
               <p>Check this out</p>
-              <a href="https://github.com/medhavii/quickQuiz.git" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+              <a
+                href="https://github.com/medhavii/quickQuiz.git"
+                target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
             </div>
           </div>
           <div class="work">
-            <img src="Images/Screenshot 2022-11-12 114104.png" alt="">
+            <img src="Images/Screenshot 2022-11-12 114104.png" alt="" />
             <div class="layer">
               <h3>Chrome Extension</h3>
-              <p>A chrome extension which lets you save the links and use it later</p>
-              <a href="https://github.com/medhavii/chromeExtension.git" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-          </div>
+              <p>
+                A chrome extension which lets you save the links and use it
+                later
+              </p>
+              <a
+                href="https://github.com/medhavii/chromeExtension.git"
+                target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
           </div>
           <div class="work">
-            <img src="Images/website.png" alt="">
+            <img src="Images/website.png" alt="" />
             <div class="layer">
-            <h3>Website</h3>
+              <h3>Website</h3>
               <p>Check this out</p>
-              <a href="https://medhavii.github.io/Project01/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+              <a href="https://medhavii.github.io/Project01/" target="_blank"
+                ><i class="fa-solid fa-arrow-up-right-from-square"></i
+              ></a>
+            </div>
           </div>
         </div>
       </div>
@@ -218,18 +235,42 @@
             <p><i class="fa-solid fa-envelope"></i>medhavimehta118@gmail.com</p>
             <p><i class="fa-solid fa-phone"></i>9429510929</p>
             <div class="social-icons">
-              <a href="https://github.com/medhavii" target="_blank"><i class="fa-brands fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/medhavi-mehta-1284271b5/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-              <a href="https://twitter.com/medhavi_mehta" target="_blank"><i class="fa-brands fa-square-twitter"></i></a>
-              <a href="https://medium.com/@medhavimehta118" target="_blank"><i class="fa-brands fa-medium"></i></a>
+              <a href="https://github.com/medhavii" target="_blank"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+              <a
+                href="https://www.linkedin.com/in/medhavi-mehta-1284271b5/"
+                target="_blank"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="https://twitter.com/medhavi_mehta" target="_blank"
+                ><i class="fa-brands fa-square-twitter"></i
+              ></a>
+              <a href="https://medium.com/@medhavimehta118" target="_blank"
+                ><i class="fa-brands fa-medium"></i
+              ></a>
             </div>
-            <a href="https://drive.google.com/file/d/1W_jCo4adY8WORcb2VlBRTOdbP-wTCAbU/view?usp=share_link" target="_blank" class="btn btn2">RESUME</a>
+            <a
+              href="https://drive.google.com/file/d/1W_jCo4adY8WORcb2VlBRTOdbP-wTCAbU/view?usp=share_link"
+              target="_blank"
+              class="btn btn2"
+              >RESUME</a
+            >
           </div>
           <div class="contact-right">
             <form name="submit-to-google-sheet">
-              <input type="text" name="Name" placeholder="Your Name" required>
-              <input type="email" name="Email" placeholder="Your Email" required>
-              <textarea name="Message"  rows="6" placeholder="Your Message"></textarea>
+              <input type="text" name="Name" placeholder="Your Name" required />
+              <input
+                type="email"
+                name="Email"
+                placeholder="Your Email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your Message"
+              ></textarea>
               <button type="Submit" class="btn btn2">Submit</button>
             </form>
             <span id="msg"></span>
@@ -240,7 +281,6 @@
 
     <div class="copyright">
       <p>Copyright <i class="fa-regular fa-copyright"></i> Medhavi.</p>
-      
     </div>
     <script src="script.js"></script>
   </body>
